<resources>
    <string name="app_name">Mobile Teller</string>
    <string name="app_name_dashboard">Mobile Teller Dashboard</string>
    <string name="webService">https://mteller.balisoket.com/api</string>
    <string name="hashKey">B4l1S0k3t</string>


    <string name="printerNbrCharacterPerLine">32</string>
    <string name="bluetooth_devices">Bluetooth Devices</string>
    <string name="connect">Connect</string>
    <string name="connected">Status: Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Status: Disconnected</string>
    <string name="print">Print</string>
    <string name="Keluar">Keluar</string>
    <string name="MutasiDeposito">Mutasi Simp. Berjangka</string>
    <string name="MutasiSimade">Mutasi Simp. Bulanan</string>
    <string name="MutasiTeller">Lap. Mutasi Teller</string>
    <string name="MutasiPinjaman">Mutasi Pinjaman</string>
    <string name="MutasiSimpanan">Mutasi Simpanan</string>
    <string name="Setoran">Setoran Tunai</string>
    <string name="Tarikan">Penarikan Tunai</string>
    <string name="share">Bagikan</string>
    <string name="back">Kembali</string>
    <string name="jurnaltransaksi">Jurnal Transaksi</string>
    <string name="BKM">Bukti Kas Masuk</string>
    <string name="BKK">Bukti Kas Keluar</string>
    <string name="setting">Setting</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="soket">Soket</string>
    <string name="pilihcapem">Pilih Cabang</string>
    <string name="pilihkolektor">Pilih Kolektor</string>
    <string name="login">Login</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="courtessy">Developed by @fjpranadi - BaliAyuApp</string>
    <string name="btname">Bluetooth Device Name</string>
    <string name="btaddress">Bluetooth Device Address</string>
    <string name="input_kode_institusi">Input Kode Institusi</string>
    <string name="setting1">Pengaturan</string>
    <string name="test_print">Test Print</string>
    <string name="TellerPinjaman">Bayar Angsuran</string>
    <string name="next">Lanjut</string>
    <string name="scanqr">Scan QR Code</string>
    <string name="input_kredit_id">Input No Pinjaman/ Scan-></string>
    <string name="input_kredit_id1">Input Pinjaman No/ Scan-></string>
    <string name="setoran_tunai">Setoran Tunai</string>
    <string name="InputRekeningTujuan">Input No Rekening Tujuan/ Scan -></string>
    <string name="InputRekeningTujuan1">Input Rekening Tujuan/ Scan -></string>
    <string name="InpurRekeningAsal">Input No Rekening Asal/ Scan -></string>
    <string name="InpurRekeningAsal1">Input Rekening Asal/ Scan -></string>
    <string name="TujuanRekening">Tujuan Setoran Tunai </string>
    <string name="InputNominalSetoran">Input Nominal Setoran Tunai</string>
    <string name="PilihNominal">atau pilih/ tambah nominal</string>
    <string name="limaribu">5000</string>
    <string name="sepuluhribu">10.000</string>
    <string name="duapuluhribu">20.000</string>
    <string name="limapuluhribu">50.000</string>
    <string name="tujuhpuluhlimaribu">75.000</string>
    <string name="seratusribu">100.000</string>
    <string name="duaratuslimapuluhribu">250.000</string>
    <string name="limaratusribu">500.000</string>
    <string name="satujuta">1.000.000</string>
    <string name="duaratustibu">200.000</string>
    <string name="tujuhratuslimapuluhribu">750.000</string>
    <string name="rekeningasalpenarikan">Asal Penarikan Tunai </string>
    <string name="InputNominalPenarikan">Input Nominal Penarikan Tunai</string>
    <string name="InputNominalPembayaranAngsuran">Input Nominal Pembayaran Angsuran</string>
    <string name="PokokPinjaman">Pokok Pinjaman: </string>
    <string name="JatuhTempo">Jatuh Tempo: </string>
    <string name="Angsuran">Angsuran: </string>
    <string name="TgkPokok">Tgk Pokok</string>
    <string name="TgkBunga">Tgk Bunga</string>
    <string name="Denda">Denda</string>
    <string name="TotalTunggakan">Total : </string>
    <string name="SisaPinjaman">Sisa Pinjaman: </string>
    <string name="AngsuranKolektif">Angsuran Kolektif</string>
    <string name="PilihAutoDebet">Pilih Angsuran Kolektif</string>
    <string name="DaftarAutoDebet">Daftar Auto Debet</string>
    <string name="rekening_tujuan">Rekening Tujuan</string>
    <string name="input_no_rek_tujuan">Input No Rekening Tujuan</string>
    <string name="RekeningAsal">Rekening Asal</string>
    <string name="AutoDebetID">Auto Debet ID</string>
    <string name="Angsuran1">Angsuran</string>
    <string name="JumlahBayar">Jumlah Bayar</string>
    <string name="InputNominal">Input Nominal</string>
    <string name="UserYangAkanLogin">Input User Pengguna Device Ini</string>
</resources>