<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/solidleafbg"
    tools:context=".SetoranTunaiActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:background="#118334">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp">

                <ImageButton
                    android:id="@+id/imageButtonBackSetoranTunai"
                    style="@android:style/Widget.Holo.Light.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@color/mygreen"
                    android:contentDescription="@string/back"
                    app:srcCompat="@drawable/abc_vector_test"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/txtHeaderSetoranTunai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/imageButtonNextSetoranTunai"
                    android:layout_toEndOf="@id/imageButtonBackSetoranTunai"
                    android:text="@string/TujuanRekening"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imageButtonNextSetoranTunai"
                    style="@android:style/Widget.Holo.Light.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:drawable/ic_menu_send"
                    android:contentDescription="@string/next"
                    tools:ignore="TouchTargetSizeCheck,ImageContrastCheck"
                    tools:srcCompat="@android:drawable/ic_menu_send" />

            </RelativeLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="#EFDB5D"
            android:gravity="center_horizontal|center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewSetoranTunai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/mylogo_small" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewinstitutionNameSetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/courgette"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewTabIDSetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:paddingTop="5dp"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewNamadiSetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="sans-serif"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textViewAlamatdiSetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="sans-serif"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textViewSaldodiSetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="sans-serif"
                        android:textColor="#000000"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|fill_vertical"
                android:layout_weight="1"
                android:gravity="fill_horizontal|center_vertical"
                android:orientation="vertical"
                android:textAlignment="gravity">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal|center_vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TextInputEditTextSetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:gravity="center_vertical"
                        android:hint="@string/InputNominalSetoran"
                        android:inputType="number"
                        android:textAlignment="gravity"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#212121"
                        android:textSize="24sp"
                        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PilihNominal"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button5000_SetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginRight="10sp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/limaribu"
                        android:textColor="#FFFFFF"
                        tools:ignore="VisualLintButtonSize" />

                    <Button
                        android:id="@+id/button20000_SetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginRight="10sp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/duapuluhribu"
                        android:textColor="#FFFFFF"
                        tools:ignore="VisualLintButtonSize" />

                    <Button
                        android:id="@+id/button75000_SetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginRight="10sp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/tujuhpuluhlimaribu"
                        android:textColor="#FFFFFF"
                        tools:ignore="VisualLintButtonSize" />

                    <Button
                        android:id="@+id/button200000_SetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginRight="10sp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/duaratustibu"
                        android:textColor="#FFFFFF"
                        tools:ignore="VisualLintButtonSize" />

                    <Button
                        android:id="@+id/button750000_SetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginRight="10sp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/tujuhratuslimapuluhribu"
                        android:textColor="#FFFFFF"
                        tools:ignore="VisualLintButtonSize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button10000_SetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginRight="10sp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/sepuluhribu"
                        android:textColor="#FFFFFF"
                        tools:ignore="VisualLintButtonSize" />

                    <Button
                        android:id="@+id/button50000_SetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginRight="10sp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/limapuluhribu"
                        android:textColor="#FFFFFF"
                        tools:ignore="VisualLintButtonSize" />

                    <Button
                        android:id="@+id/button100000_SetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginRight="10sp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/seratusribu"
                        android:textColor="#FFFFFF"
                        tools:ignore="VisualLintButtonSize" />

                    <Button
                        android:id="@+id/button500000_SetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginRight="10sp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/limaratusribu"
                        android:textColor="#FFFFFF"
                        tools:ignore="VisualLintButtonSize" />

                    <Button
                        android:id="@+id/button1000000_SetoranTunai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginRight="10sp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/satujuta"
                        android:textColor="#FFFFFF"
                        tools:ignore="VisualLintButtonSize" />
                </LinearLayout>
            </LinearLayout>
        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>